<resources>
    <string name="app_name">STATTION</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="mobile">Mobile</string>
    <string name="verify">Verify OTP</string>
    <string name="VERIFY">VERIFY</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="failed">Verification Failed!</string>
    <string name="verified">Verified!</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add_channel">AddChannelActivity</string>
    <string name="title_activity_create_channel">CreateChannelActivity</string>
    <string name="title_activity_create_channel2">CreateChannel2Activity</string>
    <string name="website_url">Website URL</string>
    <string name="tags">Tags</string>
    <string name="metadata">Metadata</string>
    <string name="field1">Field 1</string>
    <string name="field2">Field 2</string>
    <string name="field3">Field 3</string>
    <string name="field4">Field 4</string>
    <string name="create_channel">Create Channel</string>
    <string name="create_channel2">Optional Fields</string>

    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="channel_id">Channel ID</string>
    <string name="channel_url">Channel URL</string>
    <string-array name="sort_array">
        <item>My</item>
        <item>Public</item>
    </string-array>
    <string-array name="feed_array">
        <item>Details</item>
        <item>Feed</item>
    </string-array>
    <string name="title_activity_channel_details">ChannelDetailsActivity</string>
    <string name="min_value">Minimum Value</string>
    <string name="max_value">Maximum Value</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="manage_ubscriptions">Manage Subscriptions</string>
    <string name="notifications_enabled">Notifications Enabled</string>
</resources>
