<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SettingsActivity"
    >

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:visibility="gone"
        android:id="@+id/expandableLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ael_expanded="false"
        app:ael_duration="500"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        app:ael_interpolator="decelerate"
        app:ael_orientation="vertical">
        <android.support.v7.widget.CardView
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:layout_marginTop="10dp"
                android:id="@+id/updatePwdLayout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="#c5c5c5"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="15sp"
                        android:hint="@string/old_password"
                        android:textColor="#2fa881"
                        android:id="@+id/settings_old_pwd"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="#c5c5c5"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:paddingRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="15sp"
                        android:hint="@string/new_password"
                        android:textColor="#2fa881"
                        android:id="@+id/settings_new_pwd"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:text="@string/cancel"
                        android:clickable="true"
                        android:gravity="center"
                        android:id="@+id/settings_pwd_cancel"
                        android:textColor="@color/colorAccent"
                        android:layout_toLeftOf="@+id/home_add_channel_done"
                        android:background="?attr/selectableItemBackground"/>
                    <Button
                        android:layout_alignParentEnd="true"
                        android:id="@+id/settings_pwd_update"
                        android:background="@color/colorPrimary"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:text="@string/update"
                        android:textColor="@android:color/white"
                        >
                    </Button>

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginBottom="70dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <TextView
                android:paddingBottom="5dp"
                android:id="@+id/settings_email"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:text="adityaadi1467@gmail.com"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="Mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingBottom="5dp"
                android:id="@+id/settings_phone"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:text="9928981600"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:text="@string/refresh_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <NumberPicker
                android:layout_marginLeft="20dp"
                android:id="@+id/settings_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:text="@string/notifications_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:layout_marginLeft="20dp"
                android:id="@+id/settings_notifications_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView

            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:padding="15dp"
            android:textSize="20sp"
            android:id="@+id/settings_change_pwd"
            android:layout_gravity="bottom"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="CHANGE PASSWORD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:text="@string/manage_ubscriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:layout_marginLeft="20dp"
            android:id="@+id/subs_recycler"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
