<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".activities.MainActivity">

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:spb_sections_count="4"
        app:spb_speed="2.0"
        app:spb_colors="@array/progress_colors"
        app:spb_stroke_width="4dp"
        app:spb_stroke_separator_length="4dp"
        app:spb_reversed="false"
        android:id="@+id/progressIndicator"
        app:spb_interpolator="spb_interpolator_decelerate"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="3.4"
        app:spb_progressiveStop_speed="1.5"
        />
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881"
                    />
                <TextView
                    android:layout_centerHorizontal="true"
                    android:text="@string/verify"
                    android:id="@+id/verify_otp_header"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">
                <android.support.design.widget.TextInputLayout
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="#c5c5c5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="15sp"
                        android:hint="@string/enter_otp"
                        android:textColor="#2fa881"
                        android:id="@+id/et_otp"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <Button
                    android:id="@+id/bt_verify_otp"
                    android:background="@color/colorAccent"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/VERIFY"
                    android:textColor="@android:color/white"
                    >
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
